WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56064
VO reporting incorrect list count for
http://www.macworld.com/news.html
https://bugs.webkit.org/show_bug.cgi?id=56064
Summary
VO reporting incorrect list count for http://www.macworld.com/news.html
chris fleizach
Reported
2011-03-09 17:34:52 PST
1. Go to
http://www.macworld.com/news.html
2. Move the VO cursor to the main story section of the page * RESULTS VO reports 160 items in the list. Users have reported that other screen readers report 36 items
Attachments
patch
(4.44 KB, patch)
2011-03-09 17:39 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-03-09 17:35:03 PST
rdar://9098110
chris fleizach
Comment 2
2011-03-09 17:39:16 PST
Created
attachment 85265
[details]
patch
chris fleizach
Comment 3
2011-03-09 18:24:35 PST
http://trac.webkit.org/changeset/80685
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug