VO reporting incorrect list count for http://www.macworld.com/news.html https://bugs.webkit.org/show_bug.cgi?id=56064

Reviewed by Beth Dakin.

Source/WebCore:

<li> tags should not be ignored, because they provide valuable information
to screen readers.

Test: platform/mac/accessibility/list-items-ignored.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):

LayoutTests:

* platform/mac/accessibility/list-items-ignored-expected.txt: Added.
* platform/mac/accessibility/list-items-ignored.html: Added.



Canonical link: https://commits.webkit.org/70574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80685 268f45cc-cd09-0410-ab3c-d52691b4dbfc